updates color scheme

--- a/community.html
+++ b/community.html
@@ -25,8 +25,7 @@
           <img src="image/box.png" id="bankDot" class="textbox" style="width: 100px;height: 400px;" data-toggle="tooltip" data-placement="right" data-html="true" title="<strong>Elevate Social Impact Credit Union</strong>">
           <img src="image/box.png" id="constructionDot" class="textbox" style="width: 260px;height: 250px;" data-toggle="tooltip" data-html="true" title="<strong>TIErs Construction Company</strong>">
           <div class = "bottom text-center">
-            <a href="survey.html"><button type="button" class="btn btn-primary"><i class="far fa-address-book"></i>
-           Take an interest survey!</button></a>
+            <button class="btn btn-sample" onclick="window.location.href='survey.html'"><i class="fas fa-clipboard-check"></i> Take an Interest Survey!</button>
           </div>
         </div>
       </div>
