--- a/index.html
+++ b/index.html
@@ -27,17 +27,19 @@
       <div class="container scroller">
         <div class="row">
           <div class="col-12">
-            <p class="title">Welcome to CommUnity Connect!</p>
+            <img src=image/logo.png width=100%>
+            <br>
+            <br>
             <p>Our mission is to enable students to survey and explore their community's assets to identify multiple career pathways and mentors, who can shape their professional journey.</p>
             <p>Enter your location in the map on the left to explore businesses in your community.</p>
             <img src="image/graphic.jpg" width=100%></img>
             <br>
             <br>
-            <p class="subtitle"><em>Are you ready to go on a journey?</em></p>
+            <p class="subtitle text-center
+            "><strong>Are you ready to go on a journey?</strong></p>
             <br>
             <div class="text-center">
-              <a href="community.html"><button type="button" class="btn btn-primary "><i class="fas fa-clipboard-list"></i>
-              Checkout my Community!</button></a>
+              <button class="btn btn-sample" onclick="window.location.href='community.html'"><i class="fas fa-building"></i> Checkout my Community!</button>
             </div>
             <br>
             <br>
