--- a/matches.html
+++ b/matches.html
@@ -21,7 +21,7 @@
           <div class="carousel-item active">
             <div class="card border-0">
               <br>
-              <i class="fas fa-piggy-bank fa-8x mx-auto library"></i>
+              <i class="fas fa-piggy-bank fa-8x mx-auto bank"></i>
               <div class="card-body">
                 <h5 class="card-title title">Elevating Equity</h5>
                 <p class="card-text subtitle">Elevating Equity has been around since 1961 serving the Greater Boston community.</p>
@@ -37,8 +37,8 @@
                       <h5 class="card-title subtitle">Emily Jones</h5>
                       <p><em>Accounts Manager</em></p>
                       <p class="card-text">Emily is responsible for managing an array of accounts. She also builds relationships with new clients and leads team productivity.</p>
-                      <a href="#" class="btn btn-primary"><i class="far fa-envelope"></i> Email</a>
-                      <a href="#" class="btn btn-primary"><i class="fas fa-user-circle"></i> Profile</a>
+                      <a href="#" class="btn btn-bank"><i class="far fa-envelope"></i> Email</a>
+                      <a href="#" class="btn btn-bank"><i class="fas fa-user-circle"></i> Profile</a>
                     </div>
                   </div>
                 </div>
@@ -53,8 +53,8 @@
                       <p><em>Assistant Branch Manager</em></p>
                       <p class="card-text">Jerome oversees the teller function, ATM balancing, night depository processing, and customer service duties.</p>
                       <br>
-                      <a href="#" class="btn btn-primary"><i class="far fa-envelope"></i> Email</a>
-                      <a href="#" class="btn btn-primary"><i class="fas fa-user-circle"></i> Profile</a>
+                      <a href="#" class="btn btn-bank"><i class="far fa-envelope"></i> Email</a>
+                      <a href="#" class="btn btn-bank"><i class="fas fa-user-circle"></i> Profile</a>
                     </div>
                   </div>
                 </div>
@@ -68,8 +68,8 @@
                       <h5 class="card-title subtitle">Elizabeth Gomez</h5>
                       <p><em>Bank Teller</em></p>
                       <p class="card-text">Elizabeth provides account services to customers. She also answers questions in person or on telephone regarding other bank services.</p>
-                      <a href="#" class="btn btn-primary"><i class="far fa-envelope"></i> Email</a>
-                      <a href="#" class="btn btn-primary"><i class="fas fa-user-circle"></i> Profile</a>
+                      <a href="#" class="btn btn-bank"><i class="far fa-envelope"></i> Email</a>
+                      <a href="#" class="btn btn-bank"><i class="fas fa-user-circle"></i> Profile</a>
                     </div>
                   </div>
                 </div>
@@ -78,12 +78,12 @@
               </div>
             </div>
           </div>
-          <!-- end of library -->
+          <!-- end of bank -->
           <!-- start of construction -->
           <div class="carousel-item">
             <div class="card border-0">
               <br>
-              <i class="fas fa-home fa-8x mx-auto bank owl"></i>
+              <i class="fas fa-home fa-8x mx-auto construction owl"></i>
               <div class="card-body">
                 <h5 class="card-title title">TIErs Construction Company</h5>
                 <p class="card-text subtitle">TIErs Construction Company has been a trusted hometown source for exterior home improvement since 1954. They specialize in replacement windows, siding, roofing and doors.</p>
@@ -100,7 +100,7 @@
                       <p class="text-left">
                         Thomas is experienced in repairing household appliances. As a manger, he is responsible for solving technical and mechanical problems on site. He also draws designs and blueprints for his team and creates models of buildings to present to clients.
                       </p>
-                      <button class="btn btn-primary" type="button" onClick="change_view('profiles-construction','person2');"><i class="fas fa-chevron-circle-left"></i> Go Back</button>
+                      <button class="btn btn-construction" type="button" onClick="change_view('profiles-construction','person2');"><i class="fas fa-chevron-circle-left"></i> Go Back</button>
                     </div>
                   </div>
                 </div>
@@ -117,8 +117,8 @@
                       <h5 class="card-title subtitle">Thomas Napier</h5>
                       <p><em>Architectural and Engineering Manager</em></p>
                       <p class="card-text">Thomas has been with TIErs for 15 years working his way up from doing household roofing to being a project manager on long-term contracts. </p>
-                      <a href="mailto:someone@example.com?Subject=Hello%20again" target="_blank" class="btn btn-primary"><i class="far fa-envelope"></i> Email</a>
-                      <button class="btn btn-primary" type="button" onClick="change_view('person2','profiles-construction');"><i class="fas fa-user-circle"></i> Profile</button>
+                      <a href="mailto:someone@example.com?Subject=Hello%20again" target="_blank" class="btn btn-construction"><i class="far fa-envelope"></i> Email</a>
+                      <button class="btn btn-construction" type="button" onClick="change_view('person2','profiles-construction');"><i class="fas fa-user-circle"></i> Profile</button>
                     </div>
                   </div>
                 </div>
@@ -133,8 +133,8 @@
                       <p><em>Civil Engineer</em></p>
                       <p class="card-text">Derrick plans, designs and oversees construction and maintenance of building structures and infrastructure.</p>
                       <br>
-                      <a href="#" class="btn btn-primary"><i class="far fa-envelope"></i> Email</a>
-                      <a href="#" class="btn btn-primary"><i class="fas fa-user-circle"></i> Profile</a>
+                      <a href="#" class="btn btn-construction"><i class="far fa-envelope"></i> Email</a>
+                      <a href="#" class="btn btn-construction"><i class="fas fa-user-circle"></i> Profile</a>
                       </div>
                   </div>
                 </div>
@@ -149,8 +149,8 @@
                       <p><em>Construction Assistant</em></p>
                       <p class="card-text">Katherine assists construction tradespeople on construction sites. She ensures materials and tools are on site.</p>
                       <br>
-                      <a href="#" class="btn btn-primary"><i class="far fa-envelope"></i> Email</a>
-                      <a href="#" class="btn btn-primary"><i class="fas fa-user-circle"></i> Profile</a>
+                      <a href="#" class="btn btn-construction"><i class="far fa-envelope"></i> Email</a>
+                      <a href="#" class="btn btn-construction"><i class="fas fa-user-circle"></i> Profile</a>
                       </div>
                   </div>
                 </div>
@@ -179,7 +179,7 @@
                       <br>
                       <p class="text-left subtitle">Rachel Matthews</p>
                       <p class="text-left">As the radio and television announcer for Solidarity Rachel hosts civic, charitable, or promotional events that are broadcast over television or radio. She also writes and edits video and scripts for broadcasts. She is responsible for locating guests to appear on talk or interview shows and uses video and recording technology in all her programs.</p>
-                      <button class="btn btn-primary" type="button" onClick="change_view('profiles-radio','person1');"><i class="fas fa-chevron-circle-left"></i> Go Back</button>
+                      <button class="btn btn-radio" type="button" onClick="change_view('profiles-radio','person1');"><i class="fas fa-chevron-circle-left"></i> Go Back</button>
                     </div>
                   </div>
                 </div>
@@ -196,8 +196,8 @@
                       <h5 class="card-title subtitle">Rachel Matthews</h5>
                       <p><em>Radio and television Announcer</em></p>
                       <p class="card-text">Rachel has been with Solidarity for 5 years. She started as an intern and worked her way up to full-time announcer.</p>
-                      <a href="mailto:someone@example.com?Subject=Hello%20again" target="_blank" class="btn btn-primary"><i class="far fa-envelope"></i> Email</a>
-                      <button class="btn btn-primary" type="button" onClick="change_view('person1','profiles-radio');"><i class="fas fa-user-circle"></i> Profile</button>
+                      <a href="mailto:someone@example.com?Subject=Hello%20again" target="_blank" class="btn btn-radio"><i class="far fa-envelope"></i> Email</a>
+                      <button class="btn btn-radio" type="button" onClick="change_view('person1','profiles-radio');"><i class="fas fa-user-circle"></i> Profile</button>
                     </div>
                   </div>
                 </div>
@@ -212,8 +212,8 @@
                       <p><em>Producer</em></p>
                       <p class="card-text"> Janine creates content and manages the whole radio production process for both live and recorded programmes.</p>
                       <br>
-                      <a href="#" class="btn btn-primary"><i class="far fa-envelope"></i> Email</a>
-                      <a href="#" class="btn btn-primary"><i class="fas fa-user-circle"></i> Profile</a>
+                      <a href="#" class="btn btn-radio"><i class="far fa-envelope"></i> Email</a>
+                      <a href="#" class="btn btn-radio"><i class="fas fa-user-circle"></i> Profile</a>
                     </div>
                   </div>
                 </div>
@@ -228,8 +228,8 @@
                       <p><em>Radio Programme Controller</em><p>
                       <p class="card-text">Joseph leads programming teams on commercial radio stations and manages advertisement content.</p>
                       <br>
-                      <a href="#" class="btn btn-primary"><i class="far fa-envelope"></i> Email</a>
-                      <a href="#" class="btn btn-primary"><i class="fas fa-user-circle"></i> Profile</a>
+                      <a href="#" class="btn btn-radio"><i class="far fa-envelope"></i> Email</a>
+                      <a href="#" class="btn btn-radio"><i class="fas fa-user-circle"></i> Profile</a>
                     </div>
                   </div>
                 </div>
