--- a/survey.html
+++ b/survey.html
@@ -55,8 +55,7 @@
 	</div>
   <br>
 	<div class="text-center results">
-    <a href="interests.html"><button type="button" class="btn btn-primary submit"><i class="fas fa-binoculars"></i>
-     View my results!</button></a>
+     <button class="btn btn-sample" onclick="window.location.href='interests.html'"><i class="fas fa-binoculars"></i>View my results!</button>
 	</div>
 </div>
 
