--- a/interests.html
+++ b/interests.html
@@ -135,8 +135,7 @@
     <br>
     <div class = "row text-center">
       <div class = "col-12">
-        <a href="matches.html"><button type="button" class="btn btn-primary"><i class="far fa-address-book"></i>
-       View matches</button></a>
+        <button class="btn btn-sample" onclick="window.location.href='matches.html'"><i class="far fa-address-book"></i> View matches!</button>
       </div>
    </div>
  </div>
