updates for presentation

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
             "><strong>Are you ready to go on a journey?</strong></p>
             <br>
             <div class="text-center">
-              <button class="btn btn-sample" onclick="window.location.href='community.html'"><i class="fas fa-building"></i> Checkout my Community!</button>
+              <button class="btn btn-sample" onclick="window.location.href='community.html'"><i class="fas fa-building"></i> Checkout my community!</button>
             </div>
             <br>
             <br>
