--- a/matches.html
+++ b/matches.html
@@ -13,77 +13,19 @@
     <title>Community Connect</title>
   </head>
   <body>
+    <div>
+      <button type="button" onclick="alert('Hello world!')">Click Me!</button>
+      <button class="btn" onclick="window.location.href='index.html'"><i class="fa fa-home fa-2x mx-auto"></i></button>
+    </div>
     <div class="container">
       <!-- start of carousel -->
       <div id="my_carousel" class="carousel slide" data-pause="true">
         <div class="carousel-inner">
-          <!-- start of bank -->
+          <!-- start of construction -->
           <div class="carousel-item active">
             <div class="card border-0">
               <br>
-              <i class="fas fa-piggy-bank fa-8x mx-auto bank"></i>
-              <div class="card-body">
-                <h5 class="card-title title">Elevating Equity</h5>
-                <p class="card-text subtitle">Elevating Equity has been around since 1961 serving the Greater Boston community.</p>
-              </div>
-              <div class="row">
-                <div class="col-md-4">
-                  <!-- Emily Jones -->
-                  <div class="card text-center inner-card">
-                    <div class="card-body">
-                      <img src="image/emily.png" height="128"></img>
-                      <br>
-                      <br>
-                      <h5 class="card-title subtitle">Emily Jones</h5>
-                      <p><em>Accounts Manager</em></p>
-                      <p class="card-text">Emily is responsible for managing an array of accounts. She also builds relationships with new clients and leads team productivity.</p>
-                      <a href="#" class="btn btn-bank"><i class="far fa-envelope"></i> Email</a>
-                      <a href="#" class="btn btn-bank"><i class="fas fa-user-circle"></i> Profile</a>
-                    </div>
-                  </div>
-                </div>
-                <div class="col-md-4">
-                  <!-- Jerome Daniels -->
-                  <div class="card text-center inner-card">
-                    <div class="card-body">
-                      <img src="image/jerome.png" height="128"></img>
-                      <br>
-                      <br>
-                      <h5 class="card-title subtitle">Jerome Daniels</h5>
-                      <p><em>Assistant Branch Manager</em></p>
-                      <p class="card-text">Jerome oversees the teller function, ATM balancing, night depository processing, and customer service duties.</p>
-                      <br>
-                      <a href="#" class="btn btn-bank"><i class="far fa-envelope"></i> Email</a>
-                      <a href="#" class="btn btn-bank"><i class="fas fa-user-circle"></i> Profile</a>
-                    </div>
-                  </div>
-                </div>
-                <div class="col-md-4">
-                  <!-- Elizabeth Gomez -->
-                  <div class="card text-center inner-card">
-                    <div class="card-body">
-                      <img src="image/elizabeth.png" height="128"></img>
-                      <br>
-                      <br>
-                      <h5 class="card-title subtitle">Elizabeth Gomez</h5>
-                      <p><em>Bank Teller</em></p>
-                      <p class="card-text">Elizabeth provides account services to customers. She also answers questions in person or on telephone regarding other bank services.</p>
-                      <a href="#" class="btn btn-bank"><i class="far fa-envelope"></i> Email</a>
-                      <a href="#" class="btn btn-bank"><i class="fas fa-user-circle"></i> Profile</a>
-                    </div>
-                  </div>
-                </div>
-                <br>
-                <br>
-              </div>
-            </div>
-          </div>
-          <!-- end of bank -->
-          <!-- start of construction -->
-          <div class="carousel-item">
-            <div class="card border-0">
-              <br>
-              <i class="fas fa-home fa-8x mx-auto construction owl"></i>
+              <i class="fas fa-building fa-8x mx-auto construction owl"></i>
               <div class="card-body">
                 <h5 class="card-title title">TIErs Construction Company</h5>
                 <p class="card-text subtitle">TIErs Construction Company has been a trusted hometown source for exterior home improvement since 1954. They specialize in replacement windows, siding, roofing and doors.</p>
@@ -239,6 +181,68 @@
             </div>
           </div>
           <!-- end of radio station -->
+          <!-- start of bank -->
+          <div class="carousel-item">
+            <div class="card border-0">
+              <br>
+              <i class="fas fa-piggy-bank fa-8x mx-auto bank"></i>
+              <div class="card-body">
+                <h5 class="card-title title">Elevating Equity</h5>
+                <p class="card-text subtitle">Elevating Equity has been around since 1961 serving the Greater Boston community.</p>
+              </div>
+              <div class="row">
+                <div class="col-md-4">
+                  <!-- Emily Jones -->
+                  <div class="card text-center inner-card">
+                    <div class="card-body">
+                      <img src="image/emily.png" height="128"></img>
+                      <br>
+                      <br>
+                      <h5 class="card-title subtitle">Emily Jones</h5>
+                      <p><em>Accounts Manager</em></p>
+                      <p class="card-text">Emily is responsible for managing an array of accounts. She also builds relationships with new clients and leads team productivity.</p>
+                      <a href="#" class="btn btn-bank"><i class="far fa-envelope"></i> Email</a>
+                      <a href="#" class="btn btn-bank"><i class="fas fa-user-circle"></i> Profile</a>
+                    </div>
+                  </div>
+                </div>
+                <div class="col-md-4">
+                  <!-- Jerome Daniels -->
+                  <div class="card text-center inner-card">
+                    <div class="card-body">
+                      <img src="image/jerome.png" height="128"></img>
+                      <br>
+                      <br>
+                      <h5 class="card-title subtitle">Jerome Daniels</h5>
+                      <p><em>Assistant Branch Manager</em></p>
+                      <p class="card-text">Jerome oversees the teller function, ATM balancing, night depository processing, and customer service duties.</p>
+                      <br>
+                      <a href="#" class="btn btn-bank"><i class="far fa-envelope"></i> Email</a>
+                      <a href="#" class="btn btn-bank"><i class="fas fa-user-circle"></i> Profile</a>
+                    </div>
+                  </div>
+                </div>
+                <div class="col-md-4">
+                  <!-- Elizabeth Gomez -->
+                  <div class="card text-center inner-card">
+                    <div class="card-body">
+                      <img src="image/elizabeth.png" height="128"></img>
+                      <br>
+                      <br>
+                      <h5 class="card-title subtitle">Elizabeth Gomez</h5>
+                      <p><em>Bank Teller</em></p>
+                      <p class="card-text">Elizabeth provides account services to customers. She also answers questions in person or on telephone regarding other bank services.</p>
+                      <a href="#" class="btn btn-bank"><i class="far fa-envelope"></i> Email</a>
+                      <a href="#" class="btn btn-bank"><i class="fas fa-user-circle"></i> Profile</a>
+                    </div>
+                  </div>
+                </div>
+                <br>
+                <br>
+              </div>
+            </div>
+          </div>
+          <!-- end of bank -->
         </div>
       </div>
     </div>
