--- a/interests.html
+++ b/interests.html
@@ -18,7 +18,7 @@
       <div class="row">
         <div class="col">
           <br>
-          <h1 class="title">It seems like you might be interested in Building and Construction Trades.</h1>
+          <h1 class="title">It seems like you might be interested in Building and Construction Trades</h1>
           <p class="subtitle">An occupation in this field is called Architectural and Engineering Manager</p>
         </div>
         <div class="card-columns">
