adds home buttons

--- a/matches.html
+++ b/matches.html
@@ -13,6 +13,7 @@
     <title>Community Connect</title>
   </head>
   <body>
+      <button class="btn btn-sample" onclick="window.location.href='index.html'" id=marg><i class="fas fa-home"></i>Home</button>
     <div class="container">
       <!-- start of carousel -->
       <div id="my_carousel" class="carousel slide" data-pause="true">
