--- a/survey.html
+++ b/survey.html
@@ -55,6 +55,7 @@
 	</div>
   <br>
 	<div class="text-center results">
+      <button class="btn btn-sample" onclick="window.location.href='index.html'"><i class="fas fa-home"></i>Home</button>
      <button class="btn btn-sample" onclick="window.location.href='interests.html'"><i class="fas fa-binoculars"></i>View my results!</button>
 	</div>
 </div>
