--- a/interests.html
+++ b/interests.html
@@ -135,6 +135,7 @@
     <br>
     <div class = "row text-center">
       <div class = "col-12">
+        <button class="btn btn-sample" onclick="window.location.href='index.html'"><i class="fas fa-home"></i>Home</button>
         <button class="btn btn-sample" onclick="window.location.href='matches.html'"><i class="far fa-address-book"></i> View matches!</button>
       </div>
    </div>
